--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@ionic-native/core": "~4.11.0",
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
-    "@ionic/pro": "2.0.3",
+    "@ionic/pro": "^2.0.3",
     "@ionic/storage": "2.1.3",
+    "cordova-plugin-ionic": "^5.1.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -32,8 +33,11 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
+    "@ionic/app-scripts": "^3.2.0",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {}
+  }
 }
